microservices/bonus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bonus
    version: "1.0"
  name: bonus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bonus
  template:
    metadata:
      labels:
        app: bonus
    spec:
      containers:
      - name: bonus
        image: docker.io/ewolff/microservice-istio-bonus:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bonus
  name: bonus
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: bonus
