microservices/shipping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shipping
    version: "1.0"
  name: shipping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - name: shipping
        image: microservice-istio-shipping:1
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shipping
  name: shipping
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: shipping
  type: NodePort
