microservices/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /shipping/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: shipping.microservices.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: invoicing
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /invoicing/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: invoicing.microservices.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /order/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: order.microservices.svc.cluster.local
